--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -3,8 +3,12 @@ name: Rust
 on:
   push:
     branches: [ "main", "dev" ]
+    paths:
+      - 'server/**'
   pull_request:
     branches: [ "main", "dev" ]
+    paths:
+      - 'server/**'
 
 env:
   CARGO_TERM_COLOR: always
@@ -18,5 +22,7 @@ jobs:
     - uses: actions/checkout@v4
     - name: Build
       run: cargo build --verbose
+      working-directory: ./server
     - name: Run tests
       run: cargo test --verbose
+      working-directory: ./server
