--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,6 +1,14 @@
 [package]
 name = "netcode"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
+default-run = "netcode"
 
 [dependencies]
+tokio = { version = "1.28.0", features = ["full"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+bincode = "1.3.3"
+log = "0.4"
+env_logger = "0.10.0"
+clap = { version = "4.2.1", features = ["derive"] }
