--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,9 +6,11 @@ default-run = "netcode"
 
 [dependencies]
 tokio = { version = "1.28.0", features = ["full"] }
+tokio-tungstenite = "0.19.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 bincode = "1.3.3"
 log = "0.4"
 env_logger = "0.10.0"
 clap = { version = "4.2.1", features = ["derive"] }
+futures-util = "0.3"
