--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -5,10 +5,6 @@ edition = "2021"
 default-run = "netcode"
 
 [dependencies]
-tokio = { version = "1.28.0", features = ["full"] }
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-bincode = "1.3.3"
-log = "0.4"
-env_logger = "0.10.0"
+base64 = "0.22.1"
+sha1 = "0.10.6"
 clap = { version = "4.2.1", features = ["derive"] }
