--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -8,3 +8,5 @@ default-run = "netcode"
 base64 = "0.22.1"
 sha1 = "0.10.6"
 clap = { version = "4.2.1", features = ["derive"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
