--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -10,3 +10,5 @@ sha1 = "0.10.6"
 clap = { version = "4.2.1", features = ["derive"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+tokio = { version = "1", features = ["full"] }
+queues = "1.0.2"
