--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,17 +1,14 @@
 [package]
-name = "netcode"
+name = "server"
 version = "0.1.0"
 edition = "2021"
-default-run = "netcode"
 
 [dependencies]
-tokio = { version = "1.28.0", features = ["full"] }
-tokio-tungstenite = "0.19.0"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-bincode = "1.3.3"
-log = "0.4"
-env_logger = "0.10.0"
-clap = { version = "4.2.1", features = ["derive"] }
-futures-util = "0.3"
-rand = "0.8"
+shared = { path = "../shared" }
+tokio = { workspace = true }
+serde = { workspace = true }
+bincode = { workspace = true }
+log = { workspace = true }
+env_logger = { workspace = true }
+clap = { workspace = true }
+rand = { workspace = true }
