--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -3,6 +3,14 @@ name = "server"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+name = "server"
+path = "src/lib.rs"
+
+[[bin]]
+name = "server"
+path = "src/main.rs"
+
 [dependencies]
 shared = { path = "../shared" }
 tokio = { workspace = true }
@@ -12,3 +20,7 @@ log = { workspace = true }
 env_logger = { workspace = true }
 clap = { workspace = true }
 rand = { workspace = true }
+
+[dev-dependencies]
+tokio-test = { workspace = true }
+assert_approx_eq = { workspace = true }
