--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,9 +56,8 @@ jobs:
               with:
                   images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
                   tags: |
-                      type=ref,event=branch
+                      type=raw,value=latest
                       type=sha,prefix={{branch}}-
-                      type=raw,value=latest,enable={{is_default_branch}}
 
             - name: Build and push Docker image
               uses: docker/build-push-action@v5
