add support for domains

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ assert_approx_eq = "1.1.0"
 # Dependencies for integration tests (workspace root needs these)
 [dependencies]
 shared = { path = "shared" }
+client = { path = "client" }
 tokio = { workspace = true }
 serde = { workspace = true }
 bincode = { workspace = true }
